# sendosio

./: .beman-tidy.yaml  .clang-format  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  flake.nix  lockfile.json  stamp.sh  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: catch2_exemplar_test.yml  ci_tests.yml  pre-commit-update.yml  todo_exemplar_test.yml  vcpkg-release.yml
cookiecutter/: check_cookiecutter.sh  cookiecutter.json
cookiecutter/hooks/: post_gen_project.py
cookiecutter/{{cookiecutter.project_name}}/: .beman-tidy.yaml  CONTRIBUTING.md  lockfile.json
cookiecutter/{{cookiecutter.project_name}}/.github/: CODEOWNERS
cookiecutter/{{cookiecutter.project_name}}/examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp
cookiecutter/{{cookiecutter.project_name}}/include/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  config.hpp  config_generated.hpp.in  identity.hpp  {{cookiecutter.project_name}}.cppm  {{cookiecutter.project_name}}.hpp
cookiecutter/{{cookiecutter.project_name}}/port/: portfile.cmake.in  vcpkg.json.in
cookiecutter/{{cookiecutter.project_name}}/tests/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  identity.test.cpp
examples/: CMakeLists.txt  todo.cpp
include/beman/sendosio/: CMakeLists.txt  config.hpp  config_generated.hpp.in  sendosio.cppm  sendosio.hpp  todo.hpp
include/beman/sendosio/detail/: buffers.cppm  buffers.hpp  contracts.hpp  read.cppm  read.hpp
include/beman/sendosio/detail/buffers/: buffer_copy.cppm  buffer_copy.hpp  buffer_slice.cppm  buffer_slice.hpp  consuming_buffers.cppm  consuming_buffers.hpp  make_buffer.cppm  make_buffer.hpp  slice_of.cppm  slice_of.hpp
include/beman/sendosio/detail/concept/: read_stream.cppm  read_stream.hpp  slice.cppm  slice.hpp
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/sendosio/: CMakeLists.txt  todo.test.cpp
tests/beman/sendosio/detail/: buffer_algorithms.test.cpp  buffer_concepts.test.cpp  buffers.test.cpp  read.test.cpp
tests/beman/sendosio/detail/buffers/: buffer_copy.test.cpp  buffer_slice.test.cpp  consuming_buffers.test.cpp  make_buffer.test.cpp  slice_of.test.cpp
tests/beman/sendosio/detail/concept/: read_stream.test.cpp
